# advent-of-code-2024

./: Cargo.toml
aoc_day/: Cargo.toml
aoc_day/src/: lib.rs
day01/src/: lib.rs
day02/: Cargo.toml
day02/benches/: day02.rs
day02/src/: lib.rs
day03/: Cargo.toml
day03/src/: lib.rs
day04/: Cargo.toml
day04/src/: lib.rs
day05/: Cargo.toml
day05/benches/: day05.rs
day05/src/: lib.rs
day06/: Cargo.toml
day06/src/: lib.rs
day07/: Cargo.toml
day07/src/: lib.rs
day09/: Cargo.toml
day09/src/: lib.rs
run_aoc/: Cargo.toml
run_aoc/src/: main.rs
