[package]
name = "run_aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-aoc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
aoc_day = { path = "../aoc_day" }
day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
anyhow = "1.0.93"
