[package]
name = "run_aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "run-aoc"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5", features = ["derive"] }
aoc_day = { path = "../aoc_day" }
day01 = { path = "../day01" }
day02 = { path = "../day02" }
day03 = { path = "../day03" }
day04 = { path = "../day04" }
day05 = { path = "../day05" }
day06 = { path = "../day06" }
day07 = { path = "../day07" }
anyhow = "~1"
